--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, eligendi neque quas magni delectus aperiam, ratione sint consectetur numquam ex voluptates reprehenderit eum laudantium excepturi quia, in vero. Nihil, pariatur.</p>
+<p>This is new feature</p>
